# Realtime-Scheduling-for-Continuous-Angle-QEC-Architectures

./: .gitignore  CMakeLists.txt  LICENSE  README.md
config/: basic_test.cfg  large_autobraid.cfg  large_rescq.cfg  large_static.cfg  medium_autobraid.cfg  medium_rescq.cfg  medium_static.cfg  supermarq_autobraid.cfg  supermarq_rescq.cfg  supermarq_static.cfg
postprocess/: final.py  histograms.py  postprocess.py  requirements.txt  sensitivity.py
scripts/: basic_test.sh  gen_configs.sh  run_all.sh  run_postprocess.sh  run_scheduler.sh
simulator/: CMakeLists.txt  StaticStarArchitecture.cpp  main.cpp
